--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
                         <h1 class="tm-title tm-mt-0 tm-mb-0">
                             <span class="tm-color-primary">Waterify</span><span class="tm-color-gray-2"></span>
                         </h1>
-                        <em class="tm-tagline tm-color-light-gray">"Efficient Prediction of Water Quality Index "</em>
+                        <em class="tm-tagline tm-color-light-gray">Water Quality Prediction</em>
                     </div>
                 </a>
             </div>
